<resources>
    <string name="app_name">Needle</string>
    <string name="app_name_lower_case">needle</string>
    <string name="action_settings">Settings</string>
    <string name="app_motto">Connecting the hood.</string>
    <string name="country_code">country code (e.g. Tr)</string>
    <string name="zip_code">zip code (e.g. 06530)</string>
    <string name="anon_login_button_text">Anon Login</string>
    <string name="google_login_button_text">Google Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="empty_editText_toast_message">Do not leave text fields empty</string>
    <string name="action_plus">New Announcement</string>
    <string name="title_activity_new_advertisement">New Advertisement</string>
    <string name="description"><u>Description</u></string>
    <string name="name_hint">Name</string>
    <string name="number_hint">Optional for quicker responses.</string>
    <string name="add_new_ad">Add</string>
    <string name="cancel_new_ad">Cancel</string>
    <string name="content_authority">com.example.android.needle</string>
    <string name="sync_account_type">needle.android.example.com</string>
    <string name="pref_country_code_key">countryCode</string>
    <string name="pref_zip_code_key">zipCode</string>
    <string name="pref_country_code_label">Country Code</string>
    <string name="pref_zip_code_label">Zip Code</string>
    <string name="us_country_code">us</string>
    <string name="tr_country_code">tr</string>
    <string name="sort_by" color="@color/needle_yellow">Sort by:</string>
    <string name="date_ascending" color="@color/grey">Date Asc</string>
    <string name="date_descending" color="@color/grey">Date Desc</string>

    <string-array name="countries_array">
        <item>us</item>
        <item>tr</item>
    </string-array>
    <string-array name="countries_array_values">
        <item>us</item>
        <item>tr</item>
    </string-array>

    <string-array name="sort_by_array">
        <item>@string/date_ascending</item>
        <item>@string/date_descending</item>
    </string-array>

    <string name="title_activity_details">Details</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="action_last15">Last15</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
