<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.needle.NewAdvertisementFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/description"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        />

    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:inputType="textMultiLine"
        android:ems="10"
        android:textColor="@color/grey"
        android:id="@+id/description_editText"/>

    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/name_hint"
        android:id="@+id/name_editText"
        android:textColor="@color/grey"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@android:drawable/ic_menu_call"/>

        <EditText
            android:layout_width="0dp"
            android:id="@+id/number_editText"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/number_hint"
            android:textColor="@color/grey"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@android:drawable/ic_menu_send"/>

        <EditText
            android:layout_width="0dp"
            android:id="@+id/email_editText"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/grey"/>
    </LinearLayout>

    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/add_country_code_editText"
        android:hint="@string/country_code"
        android:textColor="@color/grey"/>

    <EditText
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/add_zip_code_editText"
        android:hint="@string/zip_code"
        android:textColor="@color/grey"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/needle_yellow"
        android:text="@string/add_new_ad"
        android:textColor="@color/white"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/needle_yellow"
        android:text="@string/cancel_new_ad"
        android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
