<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/background_blue"
    android:orientation="vertical"
    android:gravity="center">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textColor="@color/needle_yellow"
            android:text="@string/app_name_lower_case"
            android:fontFamily="sans-serif-condensed"
            android:textSize="48sp"
            />
        <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_launcher"
            android:layout_weight="0.37" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/app_motto"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/needle_yellow"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-light"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/zip_code"
            android:textColorHint="@color/white"
            android:id="@+id/zip_code_editText"/>


        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/google_login_button_text"
            android:id="@+id/google_login_button"/>




</LinearLayout>
